--- a/tools.html
+++ b/tools.html
@@ -7,6 +7,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>DotNetMomma - Tools</title>
+    <script
+    src="https://code.jquery.com/jquery-3.3.1.js"
+    integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
+    crossorigin="anonymous">
+</script>
+    <script src="./templates/scripts.js"></script>
     <link rel="stylesheet" href="styles/stylesheet.css">
     <link rel="stylesheet" href="styles/responsive.css">
     <link href="https://fonts.googleapis.com/css?family=Permanent+Marker|Luckiest+Guy|Roboto+Mono" rel="stylesheet">
@@ -15,27 +21,7 @@
 </head>
 
 <body>
-    <header>
-        <div class="container">
-            <div class="header-left">
-                <div class="header-logo">DotNetMomma</div>
-
-            </div>
-            <div class="menu-icon">
-                <span class="fa fa-bars"></span>
-            </div>
-            <div class="header-right">
-                <div class="header-nav">
-                    <ul>
-                        <li><a href="default.html">Home</a></li>
-                        <li><a href="blog.html">Blog</a></li>
-                        <li><a href="tools.html">Tools</a></li>
-                        <li><a href="training.html">Training</a></li>
-                        <li><a href="kids.html">For Kids</a></li>
-                    </ul>
-                </div>
-            </div>
-        </div>
+    <header id="header">
     </header>
     <div class="main">
         <div class="pageheader-wrapper">
