--- a/contact.html
+++ b/contact.html
@@ -6,6 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>DotNetMomma - Contact</title>
+    <script
+    src="https://code.jquery.com/jquery-3.3.1.js"
+    integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
+    crossorigin="anonymous">
+</script>
+    <script src="./templates/scripts.js"></script>
     <link rel="stylesheet" href="styles/stylesheet.css">
     <link rel="stylesheet" href="styles/responsive.css">
     <link href="https://fonts.googleapis.com/css?family=Permanent+Marker|Luckiest+Guy|Roboto+Mono" rel="stylesheet">
@@ -14,42 +20,19 @@
 </head>
 
 <body>
-    <header>
-        <div class="container">
-            <div class="header-left">
-                <div class="header-logo">DotNetMomma</div>
-
-            </div>
-            <div class="menu-icon">
-                <span class="fa fa-bars"></span>
-            </div>
-            <div class="header-right">
-                <div class="header-nav">
-                    <ul>
-                        <li><a href="default.html">Home</a></li>
-                        <li><a href="blog.html">Blog</a></li>
-                        <li><a href="tools.html">Tools</a></li>
-                        <li><a href="training.html">Training</a></li>
-                        <li><a href="kids.html">For Kids</a></li>
-                    </ul>
-                </div>
-            </div>
-        </div>
-    </header>
+        <header id="header">
+            </header>
     <main>
         <div class="main">
-            <div class="banner-wrapper">
-                <div class="container">
-                    <div class="image-content"><img src="images/pexels-photo-169573.jpeg" alt="laptop"></div>
-                    <div class="text-content">
-                        <h1>Welcome to DotNetMomma</h1>
-                        <div class="sub-heading">
-                            <p>Your one-stop resource for learning how to code</p>
+                <div class="pageheader-wrapper">
+                        <div class="container">
+                            <div class="image-content"><img src="images/pexels-photo-169573.jpeg" alt="laptop"></div>
+                            <div class="text-content">
+                                <h1>Contact</h1>
+            
+                            </div>
                         </div>
-
                     </div>
-                </div>
-            </div>
             <div class="contact-wrapper">
                 <div class="container">
                     <h2>Contact Me</h2>
