--- a/default.html
+++ b/default.html
@@ -11,12 +11,7 @@
     integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
     crossorigin="anonymous">
 </script>
-<script> 
-        $(function(){
-          $("#header").load("./header.html"); 
-          //$("#footer").load("footer.html"); 
-        });
-        </script> 
+    <script src="./templates/scripts.js"></script>
     <link rel="stylesheet" href="styles/stylesheet.css">
     <link rel="stylesheet" href="styles/responsive.css">
     <link href="https://fonts.googleapis.com/css?family=Permanent+Marker|Luckiest+Guy|Roboto+Mono" rel="stylesheet">
@@ -75,7 +70,7 @@
         </div>
     </div>
 </main>
-    <footer>
+    <footer id="footer">
 
     </footer>
 </body>
