Update blog entry

--- a/blog.html
+++ b/blog.html
@@ -50,15 +50,16 @@
                 <div class="blog-content">
                     <div class="section-heading"><span class="fas fa-terminal"></span>"Write what you know." - Mark Twain</div>
                     <div class="blog-text">
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum ipsum illo, aspernatur saepe quod
-                            distinctio dignissimos vel, officiis quo perferendis non eum dolores molestiae soluta nesciunt
-                            veniam voluptatem quaerat? Distinctio.</p>
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. In dolorum necessitatibus omnis suscipit
-                            doloremque voluptatibus quo et magni sit ab quas nam ea, nihil, eos tempora saepe possimus alias
-                            error?</p>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ea voluptate, praesentium vitae similique
-                            enim nihil, hic nesciunt, quas temporibus obcaecati aut eum ex ipsam quis quia saepe repellat
-                            doloremque possimus.</p>
+<p>Hello, welcome to my blog.  This is my first blog post.  I'm not a writer, so don't expect
+    a well written essay.  I may not be a writer, but I am a coder.   Not 
+    only am I a coder, but I am also a mom to two wonderful kids who are my world.   This blog is about my life as a coder while
+    also being a mom.</p>
+    <p>My love for programming started when I was really young.  I remember creating an
+    extremely simple program to print out pictures when I was in 4-H in elementary school.  My love of 
+    coding was rekindled when I was in high school and took a computer programming elective.  I remember
+    building a program written in BASIC.  I remember the program I wrote was an order entry screen for ordering
+    refreshment at the movie theater. 
+</p>
                     </div>
                 </div>
             </div>
