--- a/kids.html
+++ b/kids.html
@@ -91,6 +91,11 @@
                                                     <p class="description"><span class="fas fa-book icons"></span>Scratch Tutorial 8: Fruit Ninja Game</p>
                                                     </a>
                                                 </div>
+                                                <div class="tool">
+                                                    <a href="https://www.createcodeload.com/halloween-scratch-lesson/?fbclid=IwAR1chaxOGXLSigTgHLklS7J6DSCdv8K31E_pTXECr6VogBtzwlYZANOIz0M" target="_blank">
+                                                    <p class="description>"><span class="fas fa-book icons"></span>Halloween Scratch Lesson</p>
+                                                    </a>
+                                                </div>
                 </div>
 
             </div>
