Added tools and training

--- a/training.html
+++ b/training.html
@@ -36,9 +36,23 @@
         <div class="tools-wrapper">
             <div class="container">
                 <div class="section-heading"><span class="fas fa-terminal"></span>Learning is a lifetime journey.</div>
-                <div class="tool-header"><h2>Quick Guides</h2></div>
+                <div class="tool-header"><h2>Online Guides</h2></div>
                 <div class="toollist">
-                    
+                        <div class="tool">
+                                <a href="https://internetingishard.com/" target="_blank">
+                                <p class="description"><span class="fas fa-book icons"></span>Internet is Hard</p>
+                                </a>
+                            </div>
+                            <div class="tool">
+                                <a href="https://frontendmasters.github.io/bootcamp/html" target="_blank">
+                                <p class="description"><span class="fas fa-book icons"></span>Frontend Masters Bootcamp Day One - Html Reference</p>
+                                </a>
+                            </div>
+                            <div class="tool">
+                                <a href="https://frontendmasters.github.io/bootcamp/css" target="_blank">
+                                <p class="description"><span class="fas fa-book icons"></span>Frontend Masters Bootcamp Day Two - CSS Reference</p>
+                                </a>
+                            </div>
                     <div class="tool">
                         <a href="training/htmlgoodies.html" target="_blank">
                         <p class="description"><span class="fas fa-book icons"></span>HTML</p>
