--- a/training.html
+++ b/training.html
@@ -95,12 +95,12 @@
 
                             <div class="tool">
                                 <a href="https://www.w3schools.com/" target="_blank">
-                                    <p class="description"><span class="fas fa-book icons"></span>w3Schools</p>
+                                    <p class="description">w3Schools</p>
                                 </a>
                             </div>
                             <div class="tool">
                                 <a href="https://www.freecodecamp.org/" target="_blank">
-                                    <p class="description"><span class="fab fa-free-code-camp icons"></span>freeCodeCamp</p>
+                                    <p class="description">freeCodeCamp</p>
                                 </a>
                             </div>
                             <div class="tool">
